--- a/index.html
+++ b/index.html
@@ -222,8 +222,8 @@
   <div class="stars"></div>
   <div class="card" id="card">
     <div id="ask">
-      <div class="badge">Private link for Ukho 💘</div>
-      <img class="hero" id="heroImage" alt="Cute valentines" />
+      <div class="badge">This link is exclusively for you Mommy🥺</div>
+      <img class="hero" id="heroImage" alt="Ukho" />
       <h1 id="question"></h1>
       <div class="subtext" id="subtext"></div>
       <div class="button-row" id="buttonRow">
@@ -246,7 +246,7 @@
   <script>
     const config = {
       herName: "Ukho",
-      questionText: "Ukho… will you be my Valentine? 💘",
+      questionText: "Ukho… will you be my Valentine? 🥺",
       subText: "Be honest… but choose wisely 😈",
       noPhrases: [
         "No",
@@ -261,25 +261,25 @@
         "Cool. YES it is."
       ],
       images: {
-        ask: "https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=crop&w=600&q=80",
+        ask: "assets/ukho.jpg",
         sad: "https://images.unsplash.com/photo-1514516870926-206c5f1e2fd1?auto=format&fit=crop&w=600&q=80",
         win: "https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=600&q=80"
       },
       successTitle: "YAYYYY!!! 💖",
       typedLines: [
-        "Ukho… you make my world quieter in the best way 😮‍💨",
-        "I don’t want options. I want YOU.",
-        "So yes, I’m asking properly… 💘",
-        "This Saturday… I want us together for Valentine’s. Just you and me, the whole day 😭❤️",
+        "Ukho… you make my world quieter in the best way 🥺",
+        "I don’t want options. I want YOU 🥺",
+        "So yes, I’m asking properly… 🥹",
+        "This Saturday… I want us together for Valentine’s. Just you and me, the whole day 🥹",
         "We’re gonna enjoy ourselves properly—laugh, eat, take pics, everything 😌",
-        "Now stop playing and come claim your flowers 😈💝",
+        "Now stop playing and come claim your man 🥺",
         "Your boyfriend, Siba🫶"
       ],
       plan: {
-        time: "6:00 PM",
-        place: "Your favorite spot",
-        dress: "Soft glam",
-        surprise: "Hidden"
+        time: "All day 😝",
+        place: "Your place of choosing… I’m just following you 😌",
+        dress: "Anything you choose — be sexy as always 😝",
+        surprise: "Hidden😉"
       }
     };
 
@@ -395,3 +395,4 @@
   </script>
 </body>
 </html>
+
