--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
         "Cool. YES it is."
       ],
       images: {
-        ask: "/assets/ukho.jpg",
+        ask: "assets/ukho.jpg",
         sad: "https://images.unsplash.com/photo-1514516870926-206c5f1e2fd1?auto=format&fit=crop&w=600&q=80",
         win: "https://images.unsplash.com/photo-1500530855697-b586d89ba3ee?auto=format&fit=crop&w=600&q=80"
       },
